# dashy-dango

./: .gitignore  Cargo.toml  README.md  cart_size.sh  deploy.sh  index.html  optimize_cart.sh  wapm.toml  wapm2.toml
.cargo/: config.toml
assets/art/: dashy-dango.aseprite  thumbnail.aseprite  title.aseprite
assets/sprites/: fly_og.ase  spitworm_og.ase
ecs_macro/: Cargo.toml
ecs_macro/src/: lib.rs
hello-world/src/: component.rs  lib.rs
hello-world/src/component/: keyboardComponent.rs
hello-world/src/utils/: keyboard_utils.rs  mod.rs
src/: abort.rs  alloc.rs  lib.rs  wasm4.rs
src/assets/: entity_data.rs  mod.rs  sprites.rs
src/ecs/: mod.rs
src/events/: mod.rs
src/game/: mod.rs  world.rs
src/game/components/: boss_component.rs  camera_component.rs  child_component.rs  dango_eyes_component.rs  dash_able_component.rs  dash_component.rs  direction_component.rs  enemy_component.rs  game_manager_component.rs  gamepad_component.rs  health_component.rs  mod.rs  move_component.rs  player_component.rs  position_component.rs  score_component.rs  shooter_component.rs  size_component.rs  sprite_component.rs  straight_move_component.rs  tombstone_component.rs  ttl_component.rs
src/game/systems/: child_system.rs  dango_eyes_system.rs  draw_system.rs  enemy_attack_system.rs  enemy_movement_system.rs  enemy_system.rs  enemy_waves_system.rs  garbage_system.rs  health_flash_system.rs  mod.rs  (+7 more)
src/math_utils/: intersections.rs  intersections_test.rs  mod.rs  vec2.rs  vec3.rs
src/utils/: gamepad_utils.rs  keyboard_utils.rs  math.rs  mod.rs  string_utils.rs
(+8 files in other folders)
