[package]
name = "cart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
ecs_macro = { path = "ecs_macro" }
buddy-alloc = { version = "0.4.1", optional = true }
once_cell = "1.13.0"

[profile.release]
opt-level = "z"
lto = true

[features]
# use `--no-default-features` or comment out next line to disable allocator
default = ["buddy-alloc"]
